force-app/main/default/objects/Form_Field_Picklist__c/Form_Field_Picklist__c.object-meta.xml
<CustomObject>
    <label>Form Field Picklist</label>
    <nameField>
        <label>Form Field Picklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Form Field Picklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>