force-app/main/default/objects/Form_Field_Picklist__c/fields/Form_Field__c.field-meta.xml
<CustomField>
    <fullName>Form_Field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Field</label>
    <referenceTo>Form_Field__c</referenceTo>
    <relationshipLabel>Form Field Picklists</relationshipLabel>
    <relationshipName>Form_Field_Picklists</relationshipName>
    <type>Lookup</type>
</CustomField>