force-app/main/default/objects/Form_Field_Picklist__c/fields/Parent_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Parent_Picklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Picklist</label>
    <referenceTo>Form_Field_Picklist__c</referenceTo>
    <relationshipLabel>Form Field Picklists</relationshipLabel>
    <relationshipName>Form_Field_Picklists</relationshipName>
    <type>Lookup</type>
</CustomField>